--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -11,14 +11,10 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   ACTIONS_ALLOW_UNSECURE_NODE_VERSION: true
 
-script: |
-  export NVM_DIR=~/.nvm
-  source ~/.nvm/nvm.sh
-  nvm install 16  # Force Node.js version 16 which has older GLIBC
-
 jobs:
   build-and-release:
     runs-on: ubuntu-20.04
+    container: node:16
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' || github.event_name == 'push' }}
     steps:
       - name: Install needed tools
