--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -19,16 +19,16 @@ jobs:
     steps:
       - name: Install needed tools
         run: |
+          echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
+          dpkg --add-architecture armhf
+          apt-get update; apt-get upgrade
+          apt-get install --assume-yes build-essential ca-certificates gcc-multilib g++-multilib curl git zip libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
+          apt-get autoremove; apt-get autoclean
           echo '*** TEST LINUX VERSION ***'
           cat /etc/os-release
           echo '*** TEST GLIBC VERSION ***'
           ldd --version
           exit 1
-          echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
-          dpkg --add-architecture armhf
-          apt-get update
-          apt-get install --assume-yes build-essential ca-certificates gcc-multilib g++-multilib curl git zip libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
-          apt-get autoremove; apt-get autoclean
       - name: Compile FinalBurn Neo for CHA
         run: |
           git config --global --add safe.directory ${PWD}
