--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
           dpkg --add-architecture armhf
-          apt-get update; apt-get upgrade
+          apt-get update; apt-get upgrade --assume-yes
           apt-get install --assume-yes build-essential ca-certificates gcc-multilib g++-multilib curl git zip libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
           apt-get autoremove; apt-get autoclean
           echo '*** TEST LINUX VERSION ***'
