--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -22,20 +22,17 @@ jobs:
           echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
           dpkg --add-architecture armhf
           apt-get update; apt-get upgrade --assume-yes
-          apt-get install --assume-yes build-essential ca-certificates gcc-multilib g++-multilib curl git zip libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
+          apt-get install --assume-yes binutils-multiarch build-essential ca-certificates gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf curl git zip libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
           apt-get autoremove; apt-get autoclean
           echo '*** TEST LINUX VERSION ***'
           cat /etc/os-release
           echo '*** TEST GLIBC VERSION ***'
           ldd --version
-          exit 1
       - name: Compile FinalBurn Neo for CHA
         run: |
           git config --global --add safe.directory ${PWD}
           git clone "https://${GITHUB_REPOSITORY_OWNER}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" .
-          curl -L https://releases.linaro.org/components/toolchain/binaries/7.5-2019.12/arm-linux-gnueabihf/gcc-linaro-7.5.0-2019.12-x86_64_arm-linux-gnueabihf.tar.xz | tar -xJ
-          echo '#include </usr/include/arm-linux-gnueabihf/SDL2/_real_SDL_config.h>' > /usr/include/SDL2/SDL_config.h
-          PATH="${PWD}/gcc-linaro-7.5.0-2019.12-x86_64_arm-linux-gnueabihf/bin:${PATH}" CROSS_COMP=1 RELEASEBUILD=1 make sdl2
+          CROSS_COMP=1 RELEASEBUILD=1 make sdl2
           mv ./fbneo ./FinalBurn\ Neo\ for\ CHA/
           mv ./metadata/hiscore.dat ./FinalBurn\ Neo\ for\ CHA/
           echo "${{ env.NOW }}" > ./FinalBurn\ Neo\ for\ CHA/fbneo_build_date.txt
@@ -46,8 +43,8 @@ jobs:
           zip -9 -r ./FinalBurn\ Neo\ for\ CHA\ -\ Help\ Videos.zip ./FinalBurn\ Neo\ for\ CHA\ -\ Help\ Videos
       - name: Compile fbneo_libretro.so
         run: |
-          PATH="${PWD}/gcc-linaro-7.5.0-2019.12-x86_64_arm-linux-gnueabihf/bin:${PATH}" CROSS_CHA=1 make -j$(nproc) -C src/burner/libretro generate-files platform=unix_rpi2
-          PATH="${PWD}/gcc-linaro-7.5.0-2019.12-x86_64_arm-linux-gnueabihf/bin:${PATH}" CROSS_CHA=1 make -j$(nproc) -C src/burner/libretro platform=unix_rpi2
+          CROSS_COMP=1 make -j$(nproc) -C src/burner/libretro generate-files platform=unix_rpi2
+          CROSS_COMP=1 make -j$(nproc) -C src/burner/libretro platform=unix_rpi2
           mv src/burner/libretro/fbneo_libretro.so ./fbneo_libretro.${{ env.NOW }}.so
           zip -9 fbneo_libretro.zip fbneo_libretro*.so
       - name: Release FinalBurn Neo for CHA
