--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -22,7 +22,8 @@ jobs:
           echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
           dpkg --add-architecture armhf
           apt-get update; apt-get upgrade --assume-yes
-          apt-get install --assume-yes binutils-multiarch build-essential ca-certificates gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf curl git zip libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
+          apt-get install --assume-yes build-essential ca-certificates gcc-multilib g++-multilib binutils-multiarch curl git zip
+          apt-get install --assume-yes gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
           apt-get autoremove; apt-get autoclean
           echo '*** TEST LINUX VERSION ***'
           cat /etc/os-release
