--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -1,33 +1,18 @@
 name: Compile FBNeo for CHA
-
 on:
   workflow_dispatch:
   workflow_run:
     workflows: ["Sync fork"]
     types:
       - completed
-
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  ACTIONS_ALLOW_UNSECURE_NODE_VERSION: true
-
 jobs:
   build-and-release:
     runs-on: ubuntu-24.04
-    container: node:16
+    container: chokogroup/chokogroup:debian-10-glibc-2.28
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' || github.event_name == 'push' }}
     steps:
-      - name: Install needed tools
-        run: |
-          echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
-          dpkg --add-architecture armhf
-          apt-get update; apt-get upgrade --assume-yes
-          apt-get install --assume-yes build-essential ca-certificates gcc-multilib g++-multilib binutils-multiarch curl git zip
-          apt-get install --assume-yes gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf libudev-dev:armhf libsdl2-dev:armhf libsdl2-image-dev:armhf
-          echo '*** TEST LINUX VERSION ***'
-          cat /etc/os-release
-          echo '*** TEST GLIBC VERSION ***'
-          ldd --version
       - name: Compile FinalBurn Neo for CHA
         run: |
           git config --global --add safe.directory ${PWD}
