--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - name: Compile FinalBurn Neo for CHA
         run: |
+          echo "NOW=$(date +%F)" >> "$GITHUB_ENV"
           git config --global --add safe.directory ${PWD}
           git clone "https://${GITHUB_REPOSITORY_OWNER}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" .
           CROSS_COMP=1 RELEASEBUILD=1 make sdl2
