--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -10,7 +10,8 @@ env:
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
-    container: chokogroup/chokogroup:ubuntu-18.10-glibc-2.28
+    container:
+      image: ghcr.io/chokogroup/ubuntu:18.10-glibc-2.28
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' || github.event_name == 'push' }}
     steps:
       - name: Checkout code
@@ -19,7 +20,7 @@ jobs:
         run: |
           NOW=$(date +%F)
           echo "NOW=$NOW" >> "$GITHUB_ENV"
-          CROSS_COMP=1 RELEASEBUILD=1 make sdl2
+          CROSS_COMP=1 RELEASEBUILD=1 make -j$(nproc) sdl2
           mv ./fbneo ./FinalBurn\ Neo\ for\ CHA/
           mv ./metadata/hiscore.dat ./FinalBurn\ Neo\ for\ CHA/
           echo "$NOW" > ./FinalBurn\ Neo\ for\ CHA/fbneo_build_date.txt
