--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           NOW=$(date +%F)
           echo "NOW=$NOW" >> "$GITHUB_ENV"
-          CROSS_COMP=1 RELEASEBUILD=1 make sdl2 CFLAGS="-I/usr/include/arm-linux-gnueabihf"
+          CROSS_COMP=1 RELEASEBUILD=1 make sdl2
           mv ./fbneo ./FinalBurn\ Neo\ for\ CHA/
           mv ./metadata/hiscore.dat ./FinalBurn\ Neo\ for\ CHA/
           echo "$NOW" > ./FinalBurn\ Neo\ for\ CHA/fbneo_build_date.txt
