Fix deleting tag that not exist

--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -50,10 +50,10 @@ jobs:
           generate_release_notes: true
       - name: Fix tags
         run: |
-          git push --delete origin latest
-          git push --delete origin libretro-latest
-          git tag -d latest
-          git tag -d libretro-latest
+          git push --delete origin latest || :
+          git push --delete origin libretro-latest || :
+          git tag -d latest || :
+          git tag -d libretro-latest || :
           git tag latest fbneo-${{ env.NOW }}
           git tag libretro-latest fbneo-${{ env.NOW }}
           git push origin --tags
