--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -18,7 +18,7 @@ jobs:
           git config user.email "${{ github.repository_owner }}@users.noreply.github.com"
           git config --local user.password ${{ github.token }}
           git remote add upstream "https://github.com/libretro/FBNeo.git"
-          if git fetch upstream --allow-unrelated-histories && git merge upstream/master --allow-unrelated-histories && git push origin master --allow-unrelated-histories ; then
+          if git fetch upstream && git merge upstream/master --allow-unrelated-histories && git push origin master ; then
             echo "docompile=true" >> "$GITHUB_OUTPUT"
             echo "releasedate=$(date +%F)" >> "$GITHUB_OUTPUT"
           fi
