--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -8,8 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     container: chokogroup/chokogroup:ubuntu-18.10-glibc-2.28
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
       - name: Sync fork
         id: sync_step
         run: |
@@ -17,8 +15,8 @@ jobs:
           git config user.name "${{ github.repository_owner }}"
           git config user.email "${{ github.repository_owner }}@users.noreply.github.com"
           git config --local user.password ${{ github.token }}
-          git remote add upstream "https://github.com/libretro/FBNeo.git"
-          if git fetch upstream && git merge upstream/master --allow-unrelated-histories && git push origin master ; then
+          git clone "https://github.com/${{ github.repository }}.git" .
+          if git fetch upstream && git merge upstream/master && git push origin master ; then
             echo "docompile=true" >> "$GITHUB_OUTPUT"
             echo "releasedate=$(date +%F)" >> "$GITHUB_OUTPUT"
           fi
