--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Sync fork
         id: sync_step
         run: |
-          git clone "https://github.com/${{ github.repository }}.git" .
+          git clone "https://${{ github.repository_owner }}:${{ github.token }}@github.com/${{ github.repository }}.git" .
           git config --global --add safe.directory "${{ github.workspace }}"
           git config user.name "${{ github.repository_owner }}"
           git config user.email "${{ github.repository_owner }}@users.noreply.github.com"
