--- a/.github/workflows/compile-fbneo.yml
+++ b/.github/workflows/compile-fbneo.yml
@@ -17,9 +17,13 @@ jobs:
           git config user.email "${{ github.repository_owner }}@users.noreply.github.com"
           git config --local user.password ${{ github.token }}
           git remote add upstream "https://github.com/libretro/FBNeo.git"
-          if git fetch upstream && git merge upstream/master && git push origin master ; then
-            echo "docompile=true" >> "$GITHUB_OUTPUT"
-            echo "releasedate=$(date +%F)" >> "$GITHUB_OUTPUT"
+          if git fetch upstream && git status --porcelain; then
+            if git merge upstream/master && git push origin master ; then
+              echo "docompile=true" >> "$GITHUB_OUTPUT"
+              echo "releasedate=$(date +%F)" >> "$GITHUB_OUTPUT"
+            else
+              exit 1
+            fi
           fi
       - name: Compile FinalBurn Neo for CHA
         id: compile_step
